### April XX 2022, Release version 0.13.0 ###

  * MODIFIED:
    * forecast data are now automatically parse and displayed once they are received from weather API.
    * forecast buttons (1h and 1d/6h) don't trigger forecast data parsing anymore.


### April 7 2022, Release version 0.12.0 ###

  * FIXED:
    * the sunlive time was wrongly computed, it has been fixed.
    * the day or night icon wasn't set properly based on sunrise and sunset.
    * an issue in the thread to check postgresql and database has been fixed.
    * fixed a keyerror with a dispatching dictionary.
    * fixed an issue with calibration in MQTT thread.
    * the mqtt dict was wrongly read by temperature calibration.
    * the button to display keyboard and enter place in the weather api section has been fixed.

  * MODIFIED:
    * set_size function has been improved.
    * improved few imports.
    * improved use of comprehension list where it is possible.
    * improved the computation of min and max tick values in time series section.
    * changed the way postgresql, database and tables are checked.
    * few corrections.
    * the calibration methode and values have been transferred to the sensors' dictionary.
    * simplified weather forecast requests.
    * the place object is now a dictionary embedding the old place object.
    * the computation of ephemeris has been moved to a qthread.
    * moved the plotting of data to new functions in the same thread.
    * modified the way forecasts (1h and 6h or 1d) are displayed by the weather station.

  * ADDED
    * a new download thread has been added (part of new update system).
    * a new unzip thread has been added (part of new update system).
    * a new thread to install files has been added (part of new update system).
    * a new thread to countdown and reboot has been added.
    * a new window dedicated to the new update system has been added.
    * the new update system has been introduced in the main gui file.