@@ -4,6 +4,9 @@
     * forecast data are now automatically parse and displayed once they are received from weather API.
     * forecast buttons (1h and 1d/6h) don't trigger forecast data parsing anymore.
 
+  * FIXED:
+    * a mistake has been fixed in forecast name.
+
 
 ### April 7 2022, Release version 0.12.0 ###
 
